[gd_scene load_steps=74 format=3 uid="uid://ckj1v2hd8f5ju"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_t5iwf"]
[ext_resource type="Texture2D" uid="uid://dn1c6ki6jm5fp" path="res://player/Cone_shape_aoe.png" id="3_5n6dq"]
[ext_resource type="Script" path="res://player/AttackArea.gd" id="3_rv3yr"]
[ext_resource type="Texture2D" uid="uid://queso6r4t02n" path="res://animations/pSpriteSheets/p12SpriteSheet.png" id="4_agj6s"]
[ext_resource type="PackedScene" uid="uid://boig0cmjnuyvm" path="res://HealthBar3D.tscn" id="5_gfcm2"]
[ext_resource type="Texture2D" uid="uid://ljw7n8hjxw4o" path="res://animations/pSpriteSheets/p6SpriteSheet.png" id="5_gymsw"]
[ext_resource type="Texture2D" uid="uid://6vgvfk4nsvr4" path="res://animations/pSpriteSheets/p9SpriteSheet.png" id="6_yjy07"]
[ext_resource type="Texture2D" uid="uid://g4t5kmb4qkyy" path="res://animations/pSpriteSheets/p3SpriteSheet.png" id="7_5ob73"]
[ext_resource type="Texture2D" uid="uid://cgl8f23201u0y" path="res://animations/pSpriteSheets/p11SpriteSheet.png" id="8_sl7vo"]
[ext_resource type="Texture2D" uid="uid://e5n6n818ag18" path="res://animations/pSpriteSheets/p1SpriteSheet.png" id="9_aw3fu"]
[ext_resource type="Texture2D" uid="uid://dw1s7vcocebav" path="res://animations/pSpriteSheets/p4SpriteSheet.png" id="10_xvof7"]
[ext_resource type="Texture2D" uid="uid://cm5t6k7cj311y" path="res://animations/pSpriteSheets/p7SpriteSheet.png" id="11_rxr14"]
[ext_resource type="AudioStream" uid="uid://bu6w7b4hbr5u8" path="res://audio/sfx/playerTakesDamage.wav" id="13_1yiut"]
[ext_resource type="AudioStream" uid="uid://wyrfqgjhn1ll" path="res://audio/sfx/1up.wav" id="14_dqhsp"]
[ext_resource type="AudioStream" uid="uid://bukync7rco42u" path="res://audio/sfx/mobKnockback.wav" id="15_jlak6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8rgmq"]
size = Vector3(2.08667, 1, 2.29102)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pt24"]
atlas = ExtResource("4_agj6s")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw64i"]
atlas = ExtResource("4_agj6s")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye4fm"]
atlas = ExtResource("4_agj6s")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_88u01"]
atlas = ExtResource("4_agj6s")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jg5p"]
atlas = ExtResource("4_agj6s")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf6og"]
atlas = ExtResource("4_agj6s")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_i6ov1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pt24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw64i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye4fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88u01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jg5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf6og")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fv552"]
atlas = ExtResource("5_gymsw")
region = Rect2(0, 0, 1365, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pnk3"]
atlas = ExtResource("5_gymsw")
region = Rect2(1365, 0, 1365, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk7t4"]
atlas = ExtResource("5_gymsw")
region = Rect2(2730, 0, 1365, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_htncb"]
atlas = ExtResource("5_gymsw")
region = Rect2(0, 768, 1365, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlaym"]
atlas = ExtResource("5_gymsw")
region = Rect2(1365, 768, 1365, 768)

[sub_resource type="AtlasTexture" id="AtlasTexture_d65aw"]
atlas = ExtResource("5_gymsw")
region = Rect2(2730, 768, 1365, 768)

[sub_resource type="SpriteFrames" id="SpriteFrames_nmxbr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pnk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk7t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htncb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlaym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d65aw")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1mv38"]
atlas = ExtResource("6_yjy07")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxcva"]
atlas = ExtResource("6_yjy07")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf25n"]
atlas = ExtResource("6_yjy07")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfs38"]
atlas = ExtResource("6_yjy07")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ded1"]
atlas = ExtResource("6_yjy07")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_17mu5"]
atlas = ExtResource("6_yjy07")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixnss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mv38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxcva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf25n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfs38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ded1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17mu5")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_50i0c"]
atlas = ExtResource("7_5ob73")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ym6x"]
atlas = ExtResource("7_5ob73")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_lal1d"]
atlas = ExtResource("7_5ob73")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_prkx6"]
atlas = ExtResource("7_5ob73")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2yme"]
atlas = ExtResource("7_5ob73")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_j58wk"]
atlas = ExtResource("7_5ob73")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujljd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50i0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ym6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lal1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prkx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2yme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j58wk")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4803y"]
atlas = ExtResource("8_sl7vo")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_2drf2"]
atlas = ExtResource("8_sl7vo")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_aacll"]
atlas = ExtResource("8_sl7vo")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_088xo"]
atlas = ExtResource("8_sl7vo")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0ba"]
atlas = ExtResource("8_sl7vo")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_blu7a"]
atlas = ExtResource("8_sl7vo")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_2u7qo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4803y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2drf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aacll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_088xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blu7a")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kw63o"]
atlas = ExtResource("9_aw3fu")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g7yb"]
atlas = ExtResource("9_aw3fu")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4umi"]
atlas = ExtResource("9_aw3fu")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i37i"]
atlas = ExtResource("9_aw3fu")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvqja"]
atlas = ExtResource("9_aw3fu")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_ont45"]
atlas = ExtResource("9_aw3fu")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_dyfpl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw63o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g7yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4umi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i37i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvqja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ont45")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_qq3nb"]
atlas = ExtResource("11_rxr14")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx2fr"]
atlas = ExtResource("11_rxr14")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_v621d"]
atlas = ExtResource("11_rxr14")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa2i3"]
atlas = ExtResource("11_rxr14")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6upc"]
atlas = ExtResource("11_rxr14")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsb3o"]
atlas = ExtResource("11_rxr14")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdkko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq3nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx2fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v621d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa2i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6upc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsb3o")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n223b"]
atlas = ExtResource("10_xvof7")
region = Rect2(0, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxawn"]
atlas = ExtResource("10_xvof7")
region = Rect2(1280, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mw2p"]
atlas = ExtResource("10_xvof7")
region = Rect2(2560, 0, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wmkv"]
atlas = ExtResource("10_xvof7")
region = Rect2(0, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3x2o"]
atlas = ExtResource("10_xvof7")
region = Rect2(1280, 720, 1280, 720)

[sub_resource type="AtlasTexture" id="AtlasTexture_l25t1"]
atlas = ExtResource("10_xvof7")
region = Rect2(2560, 720, 1280, 720)

[sub_resource type="SpriteFrames" id="SpriteFrames_plj8x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n223b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxawn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mw2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wmkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3x2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l25t1")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="ViewportTexture" id="ViewportTexture_vi6jk"]
viewport_path = NodePath("SubViewport")

[node name="Player" type="CharacterBody3D" groups=["player"]]
process_mode = 1
collision_layer = 2
collision_mask = 13
script = ExtResource("1_t5iwf")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="MobCollision" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, -0.00012207, 0, 0)
shape = SubResource("BoxShape3D_8rgmq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00012207, 0, 0)
shape = SubResource("BoxShape3D_8rgmq")

[node name="Pivot" type="Node3D" parent="."]

[node name="AttackArea" type="Area3D" parent="Pivot"]
collision_layer = 2
collision_mask = 13
script = ExtResource("3_rv3yr")

[node name="AttackAreaPoints" type="CollisionPolygon3D" parent="Pivot/AttackArea"]
transform = Transform3D(-2.57115, 3.06418, -1.33939e-07, 0, -1.74846e-07, -4, -3.06418, -2.57115, 1.12389e-07, 0, 0, 0)
polygon = PackedVector2Array(1, 0, 0.985, 0.174, 0.94, 0.342, 0.866, 0.5, 0.707, 0.707, 0.5, 0.866, 0.342, 0.94, 0.174, 0.985, 0, 1, 0, 0)

[node name="Aoe" type="Sprite3D" parent="Pivot/AttackArea/AttackAreaPoints"]
transform = Transform3D(-0.153209, 0.128558, 0, -0.128558, -0.153209, 0, 0, 0, 0.2, 0.3, 0.3, 0)
transparency = 0.8
texture = ExtResource("3_5n6dq")

[node name="PlayerForward" type="AnimatedSprite3D" parent="." groups=["sprite"]]
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_i6ov1")
animation = &"Walk"
frame_progress = 0.474058
speed_scale = 2.0

[node name="PlayerBack" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, -1, 0)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_nmxbr")
animation = &"Walk"
frame_progress = 0.704887
speed_scale = 2.0

[node name="PlayerLeft" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, -0.5, -0.8, 0)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_ixnss")
animation = &"Walk"
frame_progress = 0.0341485
speed_scale = 2.0

[node name="PlayerRight" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, -1, 0)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_ujljd")
animation = &"Walk"
frame_progress = 0.364573
speed_scale = 2.0

[node name="PlayerForwardLeft" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_2u7qo")
animation = &"Walk"
frame_progress = 0.294136
speed_scale = 2.0

[node name="PlayerForwardRight" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_dyfpl")
animation = &"Walk"
frame_progress = 0.914716
speed_scale = 2.0

[node name="PlayerBackLeft" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 0.5)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_mdkko")
animation = &"Walk"
frame_progress = 0.033609
speed_scale = 2.0

[node name="PlayerBackRight" type="AnimatedSprite3D" parent="." groups=["sprite"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
visible = false
billboard = 1
no_depth_test = true
render_priority = 100
sprite_frames = SubResource("SpriteFrames_plj8x")
animation = &"Walk"
frame_progress = 0.117765
speed_scale = 2.0

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="HealthBar3D" parent="SubViewport" instance=ExtResource("5_gfcm2")]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)
billboard = 1
no_depth_test = true
render_priority = 102
texture = SubResource("ViewportTexture_vi6jk")

[node name="PlayerTakesDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_1yiut")
volume_db = -10.0
pitch_scale = 1.69

[node name="HealthPowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_dqhsp")
volume_db = -20.0

[node name="MobKnockback" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_jlak6")
volume_db = -10.0

[connection signal="body_entered" from="Area3D" to="." method="_onMobBodyEntered"]
[connection signal="body_entered" from="Area3D" to="." method="_onHealthPowerUpBodyEntered"]
[connection signal="body_exited" from="Area3D" to="." method="_onMobBodyExited"]
[connection signal="body_entered" from="Pivot/AttackArea" to="Pivot/AttackArea" method="_onBodyEntered"]
[connection signal="body_exited" from="Pivot/AttackArea" to="Pivot/AttackArea" method="_onBodyExited"]
